; ModuleID = '/home/carl/AnghaBench/git/extr_diff.c_add_external_diff_name.c'
source_filename = "/home/carl/AnghaBench/git/extr_diff.c_add_external_diff_name.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.repository = type { i32 }
%struct.argv_array = type { i32 }
%struct.diff_filespec = type { i32 }
%struct.diff_tempfile = type { i32, i32, i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.repository*, %struct.argv_array*, i8*, %struct.diff_filespec*)* @add_external_diff_name to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @add_external_diff_name(%struct.repository* %0, %struct.argv_array* %1, i8* %2, %struct.diff_filespec* %3) #0 {
  %5 = alloca %struct.repository*, align 8
  %6 = alloca %struct.argv_array*, align 8
  %7 = alloca i8*, align 8
  %8 = alloca %struct.diff_filespec*, align 8
  %9 = alloca %struct.diff_tempfile*, align 8
  store %struct.repository* %0, %struct.repository** %5, align 8
  store %struct.argv_array* %1, %struct.argv_array** %6, align 8
  store i8* %2, i8** %7, align 8
  store %struct.diff_filespec* %3, %struct.diff_filespec** %8, align 8
  %10 = load %struct.repository*, %struct.repository** %5, align 8
  %11 = load i8*, i8** %7, align 8
  %12 = load %struct.diff_filespec*, %struct.diff_filespec** %8, align 8
  %13 = call %struct.diff_tempfile* @prepare_temp_file(%struct.repository* %10, i8* %11, %struct.diff_filespec* %12)
  store %struct.diff_tempfile* %13, %struct.diff_tempfile** %9, align 8
  %14 = load %struct.argv_array*, %struct.argv_array** %6, align 8
  %15 = load %struct.diff_tempfile*, %struct.diff_tempfile** %9, align 8
  %16 = getelementptr inbounds %struct.diff_tempfile, %struct.diff_tempfile* %15, i32 0, i32 2
  %17 = load i32, i32* %16, align 4
  %18 = call i32 @argv_array_push(%struct.argv_array* %14, i32 %17)
  %19 = load %struct.argv_array*, %struct.argv_array** %6, align 8
  %20 = load %struct.diff_tempfile*, %struct.diff_tempfile** %9, align 8
  %21 = getelementptr inbounds %struct.diff_tempfile, %struct.diff_tempfile* %20, i32 0, i32 1
  %22 = load i32, i32* %21, align 4
  %23 = call i32 @argv_array_push(%struct.argv_array* %19, i32 %22)
  %24 = load %struct.argv_array*, %struct.argv_array** %6, align 8
  %25 = load %struct.diff_tempfile*, %struct.diff_tempfile** %9, align 8
  %26 = getelementptr inbounds %struct.diff_tempfile, %struct.diff_tempfile* %25, i32 0, i32 0
  %27 = load i32, i32* %26, align 4
  %28 = call i32 @argv_array_push(%struct.argv_array* %24, i32 %27)
  ret void
}

declare dso_local %struct.diff_tempfile* @prepare_temp_file(%struct.repository*, i8*, %struct.diff_filespec*) #1

declare dso_local i32 @argv_array_push(%struct.argv_array*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
